--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-macros": "^3.1.0",
     "bootstrap": "^5.2.0",
     "bootstrap-icons": "^1.9.1",
+    "eslint": "^8.23.1",
     "i": "^0.3.7",
     "node-scss": "^7.0.3",
     "react": "^18.2.0",
@@ -29,8 +30,7 @@
   },
   "eslintConfig": {
     "extends": [
-      "react-app",
-      "react-app/jest"
+      "react-app"
     ]
   },
   "browserslist": {
